feat: GET endpoint for list membership types
