# pertiv-backend/lib/swagger/docApi.json
@@ -3967,6 +3967,70 @@
           }
         }
       }
+    },
+    "/staff/membership-type": {
+      "get": {
+        "tags": ["Staff"],
+        "summary": "Get list membership type",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "description": "Input page number",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "page": { "type": "number" }
+              }
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": { "type": "boolean" },
+                "statusCode": { "type": "number" },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": { "type": "string" },
+                      "description": { "type": "string" },
+                      "durationDays": { "type": "number" },
+                      "maxBorrow": { "type": "number" },
+                      "maxReturn": { "type": "number" },
+                      "price": { "type": "number" }
+                    }
+                  }
+                },
+                "totalCount": { "type": "number" }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": { "type": "boolean" },
+                "statusCode": { "type": "number" },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
